[issue-256] Fixed margin spacing

--- a/cocoon/frontend/src/survey/rentForm/main/rentForm.css
+++ b/cocoon/frontend/src/survey/rentForm/main/rentForm.css
@@ -57,7 +57,7 @@
 }
 
 .filter-delete-button {
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 .survey-btn {
